# learn_audio_and_video

./: README.md
step1_搭建开发环境/: CMakeLists.txt  Makefile  README.md
step1_搭建开发环境/inc/: ffmpeg_utils.h
step1_搭建开发环境/src/: ffmpeg_utils.c  main.c
